[package]
name = "ants"
version = "0.1.0"
authors = ["Jonn Mostovoy <jm@serokell.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
production = { path = "../production" }
enum-display-derive = "0.1.0"
num-traits = "0.2"
num-derive = "0.3"
bimap = "0.4"
